# BLPConverter

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  RELEASING.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.github/workflows/: ci.yml  release.yml
blp-shell-ext/: Cargo.toml  build.rs
blp-shell-ext/examples/: decode_one.rs  thumb_smoke.rs
blp-shell-ext/src/: class_factory.rs  decode.rs  dll_export.rs  lib.rs  registry.rs  thumbnail_provider.rs
blp-shell-ext/src/utils/: create_hbitmap_bgra_premul.rs  mod.rs  resize_fit_rgba.rs  rgba_to_bgra.rs  rgba_to_bgra_premul.rs
scripts/: make-square-icon.ps1  prebuild-shell-ext-dev.mjs  prebuild-shell-ext.mjs  render-icon.ps1
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  conversion.rs  lib.rs  main.rs  metadata.rs  types.rs
src-tauri/src/shell_extension/: conflict.rs  install.rs  mod.rs  paths.rs  reg_helpers.rs  restart.rs  status.rs  uninstall.rs
src/components/: AboutSection.tsx  BlpViewSection.tsx  ConvertPanel.tsx  ErrorBoundary.tsx  SettingsPanel.tsx  StatusLog.tsx  TitleBar.tsx
src/constants/: app.ts
src/hooks/: useDragDrop.ts
src/i18n/: index.ts
src/i18n/locales/: de.json  en.json  es.json  fr.json  ko.json  pt-BR.json  ru.json  zh-CN.json
src/lib/: conversion.ts  tauri.ts
src/store/: useAppStore.ts
src/types/: index.ts
